--- a/css/index.css
+++ b/css/index.css
@@ -51,12 +51,12 @@ body{    overflow-x: hidden;
 .my-table table tr td:last-child{border-right:0}
 .my-table-02 tr{height: 30px!important;line-height: 30px!important;}
 
-.model_02{margin-right:10px;height:350px}
-.model_03{padding: 1px 0;}
-.model_04,.model_05{margin-right:10px;height:168px;margin-top:13px;position:relative}
-.model_06{margin-right:10px;margin-top:9px;height:337px}
-.model_07{margin-left:10px;height:350px}
-.model_08{margin-left:9px;height:357px;margin-top:6px}
+.model_02{margin-right:10px;height:352px}
+.model_03{padding-top: 1px;}
+.model_04,.model_05{margin-right:10px;height:172px;margin-top:8px;position:relative}
+.model_06{margin-right:10px;margin-top:9px;height:335px}
+.model_07{margin-left:10px;height:352px}
+.model_08{margin-left:9px;height:354px;margin-top:7px}
 .model_09{margin-left:10px;height:335px;margin-top:9px}
 .model_10{margin-top: 8px;}
 .model_11{margin-top:8px;padding: 8px 0;}
